fix y overflow and other bugs

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,2 +1,3 @@
 body, html
     overflow-x: hidden
+    height: 100%
